--- a/ContosoUniversity/Properties/launchSettings.json
+++ b/ContosoUniversity/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:13451",
-      "sslPort": 44319
+      "applicationUrl": "http://localhost:56349",
+      "sslPort": 44384
     }
   },
   "profiles": {
@@ -17,6 +17,7 @@
     },
     "ContosoUniversity": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
